--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -68,6 +68,30 @@
 .bg-modal-p1
   background-color: #FED981 
 
+.bg-modal-p2  
+  background-color: #5263E2
+
+.bg-modal-p3
+  background-color: #A4A3FF  
+
+.bg-modal-p4
+  background-color: #43A99B
+
+.bg-modal-p5
+  background-color: #12263F
+
+.bg-table
+  background-color: #A4A3FF
+
+.bg-white   
+  background-color: white !important
+  
+.br-gray
+  border-left: 1px solid #AFAFAF !important
+  border-right: 1px solid #AFAFAF !important
+  border-top: 1px solid #AFAFAF !important 
+  border-bottom: 1px solid #AFAFAF !important  
+
 .imgs-flotantes1
   position: relative
 .imgs-flotantes1 img.img-flotante1
@@ -101,6 +125,23 @@
     transform: translatex(25px)
   100%
     transform: translatex(0px)     
+
+.imgs-flotantes3
+  position: relative
+.imgs-flotantes3 img.img-flotante3
+  animation: float1 3.5s ease-in-out infinite alternate
+  position: absolute
+  top: 89%
+  left: 5%
+  width: 140px
+  @media (max-width: 20px)
+    width: 100px
+    left: 1%
+@keyframes float1
+  0%
+    transform: translatex(25px)
+  100%
+    transform: translatex(0px) 
 
 .up
   z-index: 5    
@@ -212,4 +253,109 @@
   &.bg-color
     &:before
       margin-bottom: -3px
-      background-color: #E2F4F6       
+      background-color: #E2F4F6  
+
+.bloque-texto-g.color-secundario
+  background-color: #A4A3FF 
+
+.bloque-texto-a.color-secundario
+  background-color: #F6F6F6
+.bloque-texto-a.color-secundario::before
+  background-color: #A4A3FF
+.bloque-texto-a::before
+  left: 34%      
+
+.col-bg-1
+  background-color: #A4A3FF 
+  border-radius: 15px 
+  border: 10px solid white   
+
+.col-bg-2
+  background-color: #FED981
+  border-radius: 15px 
+  border: 10px solid white   
+
+.col-bg-3
+  background-color: #FF8578
+  border-radius: 15px 
+  border: 10px solid white     
+
+.col-bg-1b
+  background-color: #A4A3FF 
+  border-radius: 15px 
+  border: 10px solid #F6F6F6   
+
+.col-bg-2b
+  background-color: #FED981
+  border-radius: 15px 
+  border: 10px solid #F6F6F6  
+
+.tarjeta--azul
+  background-color: #F6F6F6  
+
+.bloque-texto-a.color-acento-botones
+  background-color: #E8E8E8
+.bloque-texto-a.color-acento-botones::before
+  background-color: #43A99B
+
+.bloque-texto-a.color-acento-contenido
+  background-color: #F6F6F6
+.bloque-texto-a.color-acento-contenido::before
+  background-color: #FF8578
+
+.col-color-3
+  background-color: #E8E8E8
+  border-radius: 15px  
+
+.col-color-4
+  background-color: #ACFCFF
+  border-radius: 15px 15px 15px 15px  
+
+.img-card  
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  margin: auto   
+
+.tarjeta.color-secundario
+  background-color: #A4A3FF
+
+.br-white
+  border: 5px solid white  
+
+.tarjeta-slide__img
+  background-size: contain
+  background-repeat: no-repeat  
+
+.cajon.color-acento-botones
+  background-color: #DFF7FA
+
+.img-r
+  float: right
+
+.tarjeta.color-primario
+  background-color: #FFFFFF  
+  box-shadow: 0px 1px 1px 1px #707070 
+
+.text-black
+  color: #12263F !important    
+
+.m-top
+  margin-top: -3em  
+
+.bg-avatar1
+  background-color: #E2F4F6 !important
+
+.bg-avatar2
+  background-color: #FFDE96 !important
+
+.bg-avatar3
+  background-color: #A4A3FF !important    
+
+.img-w
+  max-width: 70%
+
+.mr
+  margin-right: -1em      
