--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -151,8 +151,11 @@
   background-size: cover
   background-position: center     
 
-.bg-slyder1
-  background-color: #FFFFFF  
+.bg-slyder
+  background-color: #FFFFFF 
+
+.tarjeta--azul
+  background-color: white   
 
 .color-fondo-text
   position: relative
@@ -325,6 +328,9 @@
 .br-white
   border: 5px solid white  
 
+.br-white1
+  border: 15px solid white  
+
 .tarjeta-slide__img
   background-size: contain
   background-repeat: no-repeat  
@@ -357,5 +363,62 @@
 .img-w
   max-width: 70%
 
+.img-w1
+  max-width: 80px !important
+  top: 75% !important
+  left: 81% !important
 .mr
   margin-right: -1em      
+
+.tabs-a.color-secundario .tabs-a__tab__selected::before
+  background-color: #A4A3FF !important  
+.tabs-a.color-secundario .tabs-a__tab__selected
+  background-color: #A4A3FF !important   
+.tarjeta.color-secundario--borde 
+  background-color: #F6F6F6
+  color: #12263F
+  border: solid 4px #12263f2f 
+.tabs-a.color-secundario .tabs-a__tab
+  background-color: #E8E8E8 
+.tabs-a.color-secundario .tabs-a__tab:hover   
+  background-color: #A4A3FF !important    
+
+.color1
+  background-color: #E4F4F6   
+
+.color2
+  background-color: #ACFCFF 
+
+.color3
+  background-color: #FFDE96
+
+.color4
+  background-color: #E8E8E8
+
+.br-radius  
+  border-radius: 25px !important
+
+.bg_img
+  position: relative
+  .row, figure, p, h3, .titulo-sexto.color-primario, .tarjeta--azul
+    position: relative
+  &::before
+    content: ""
+    position: absolute
+    margin-left: -48px
+    margin-top: 4rem
+    width: calc( 100% + 96px )
+    height: 100%       
+    background-image: url('../assets/curso/temas/img166.svg')
+    background-size: 100% auto  
+    background-repeat: no-repeat
+    background-position: center      
+
+.up
+  z-index: 2    
+
+.i-color
+  color: #A4A3FF !important  
+
+.bg-ac
+  background-color: #C9F1F2 !important
